--- a/5. Data_Engineering/Notebook/Challenges/2. Weather.ipynb
+++ b/5. Data_Engineering/Notebook/Challenges/2. Weather.ipynb
@@ -23,7 +23,7 @@
     "# host = 'wbs-project3-db.c5v1hsxt2ic8.eu-central-1.rds.amazonaws.com'\n",
     "# schema = 'gans'\n",
     "# user = 'root'\n",
-    "# password = 'Mysqlpark2022'\n",
+    "# password = 'Your Password'\n",
     "# port = 3306\n",
     "# con = f'mysql+pymysql://{user}:{password}@{host}:{port}/{schema}'"
    ]
@@ -467,7 +467,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_key = 'Yout Key'"
+    "API_key = 'Your Key'"
    ]
   },
   {
